--- a/FlirOneCamera/app/build.gradle
+++ b/FlirOneCamera/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'de.undercouch.download'
+apply plugin: 'com.google.gms.google-services'
 
 
 android {
@@ -39,7 +40,7 @@ android {
     }
 }
 project.ext.ASSET_DIR = projectDir.toString() + '/src/main/assets'
-project.ext.TMP_DIR   = project.buildDir.toString() + '/downloads'
+project.ext.TMP_DIR = project.buildDir.toString() + '/downloads'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -52,6 +53,7 @@ dependencies {
     implementation 'org.jetbrains:annotations:16.0.1'
     implementation 'androidx.palette:palette:1.0.0'
 
+    implementation 'com.google.firebase:firebase-firestore:22.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -69,4 +71,3 @@ dependencies {
 
 
 }
-
