--- a/FlirOneCamera/app/build.gradle
+++ b/FlirOneCamera/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'androidx.palette:palette:1.0.0'
 
     implementation 'com.google.firebase:firebase-firestore:22.0.1'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -67,7 +68,11 @@ dependencies {
 
     // added MLKit dependencies for face detector
 //    implementation 'org.tensorflow:tensorflow-lite:+'
+    implementation platform('com.google.firebase:firebase-bom:26.4.0')
     implementation 'com.google.mlkit:face-detection:16.0.0'
+
+
+
 
 
 }
