with location update

--- a/FlirOneCamera/app/src/main/AndroidManifest.xml
+++ b/FlirOneCamera/app/src/main/AndroidManifest.xml
@@ -4,8 +4,7 @@
 
     <uses-sdk />
     <!-- some hw might not support Usb Host mode so it's recommended to add this -->
-    <uses-feature android:name="android.hardware.usb.host" />
-
+    <!-- <uses-feature android:name="android.hardware.usb.host" /> -->
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
@@ -21,6 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.ObjectDetection">
+        <activity android:name=".change_pass"></activity>
+        <activity android:name=".add_face"></activity>
         <activity android:name=".login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,11 +41,13 @@
         <activity
             android:name=".DetectorActivity"
             android:screenOrientation="portrait">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
     </application>
 
