--- a/FlirOneCamera/app/build.gradle
+++ b/FlirOneCamera/app/build.gradle
@@ -21,6 +21,10 @@ android {
         }
     }
     repositories {
+        jcenter()
+        maven {
+            url "https://maven.java.net/content/groups/public/"
+        }
         // default path where thermalsdk AAR is stored
         flatDir dirs: '../../../modules/thermalsdk/build/outputs/aar'
         // default path where androidsdk AAR is stored
@@ -65,12 +69,13 @@ dependencies {
     implementation('org.tensorflow:tensorflow-lite:0.0.0-nightly') { changing = true }
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.google.truth:truth:1.0.1'
+    implementation "com.sun.mail:android-mail:1.6.0"
+    implementation "com.sun.mail:android-activation:1.6.0"
 
     // added MLKit dependencies for face detector
 //    implementation 'org.tensorflow:tensorflow-lite:+'
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
     implementation 'com.google.mlkit:face-detection:16.0.0'
-
 
 
 
