--- a/FlirOneCamera/app/build.gradle
+++ b/FlirOneCamera/app/build.gradle
@@ -78,6 +78,10 @@ dependencies {
     implementation 'com.google.mlkit:face-detection:16.0.0'
 
 
+    // use this dependancies to fetch API
+    implementation 'com.android.volley:volley:1.1.1'
+
+
 
 
 }
